tests/should_fail/match_guard_only_bool.nv
module fail
// SHOULD FAIL: true arm has guard so bool match is not exhaustive
fn bad(b: Bool) -> String {
    return match b {
        true if b => "guarded",
        false => "no"
    }
}
